--- a/index.html
+++ b/index.html
@@ -80,5 +80,9 @@
             }
         });
     </script>
+
+    <!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=17654289&style=0001&nbdigits=6&type=page&initCount=122" title="Total Visits" Alt="Visit counter For Is It a Holiday?"   border="0" /></a>                       
 </body>
 </html>
