--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
         </form>
         <div class="hit-counter">
             <!-- hitwebcounter Code START -->
-            <a href="https://www.hitwebcounter.com" target="_blank">
-                <img src="https://hitwebcounter.com/counter/counter.php?page=17654289&style=0001&nbdigits=6&type=page&initCount=122" 
-                     title="Total Visits" alt="Visit counter For Is It a Holiday?" border="0" />
+<!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=17654329&style=0024&nbdigits=6&type=page&initCount=122" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>            
             </a>
             <!-- hitwebcounter Code END -->
         </div>
