--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Quickly check if today is a public holiday in any country. Get the latest holiday status for countries like Australia, Germany, and more.">
+    <meta name="keywords" content="holiday status, public holiday, check holidays, today holiday, public holiday in country, is it a holiday">
+    <meta name="author" content="Is It a Holiday?">
+    <meta property="og:title" content="Is Today a Holiday? Check Public Holidays in Your Country | Holiday Status for Any Nation">
+    <meta property="og:description" content="Check if today is a public holiday in any country. Stay up to date with the latest holidays in Australia, Germany, and other nations.">
+    <meta property="og:image" content="https://isitaholiday.github.io/holiday/images/holiday-checker-image.jpg">
+    <meta property="og:url" content="https://isitaholiday.github.io/holiday/">
+    <meta property="og:type" content="website">
+    
     <title>Is Today a Holiday? Check Public Holidays in Your Country | Holiday Status for Any Nation</title>
+    
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -80,8 +90,6 @@
         </form>
         <div class="hit-counter">
             <!-- hitwebcounter Code START -->
-<!-- hitwebcounter Code START -->
-
             <!-- hitwebcounter Code END -->
         </div>
     </div>
@@ -97,5 +105,18 @@
             }
         });
     </script>
+
+    <!-- Structured Data for Schema.org -->
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+            "@type": "WebSite",
+            "url": "https://isitaholiday.github.io/holiday/",
+            "name": "Is It a Holiday?",
+            "description": "A simple way to check if today is a holiday in any country.",
+            "mainEntityOfPage": "https://isitaholiday.github.io/holiday/"
+        }
+    </script>
+
 </body>
 </html>
