--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta name="twitter:url" content="https://isitaholiday.github.io/">
 
     <!-- Title -->
-    <title>Is Today a Holiday? Check Public Holidays in Your Country | Holiday Status for Any Nation</title>
+    <title>Is Today a Holiday? Check Public Holidays in Your Country </title>
 
     <!-- Favicon -->
     <link rel="icon" href="https://isitaholiday.github.io/favicon.ico">
