--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                 <option value="" disabled selected>Select a country</option>
                 <option value="https://isitaholiday.github.io/holiday-in-australia/">Australia</option>
                 <option value="https://isitaholiday.github.io/holiday-in-germany/">Germany</option>
+                <option value="https://github.com/isitaholiday/holiday-in-UAE-Dubai/">UAE - Dubai</option>
             </select>
             <br>
             <button type="submit">Submit</button>
