--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
                 <option value="https://isitaholiday.github.io/holiday-in-australia/">Australia</option>
                 <option value="https://isitaholiday.github.io/holiday-in-germany/">Germany</option>
                 <option value="https://isitaholiday.github.io/holiday-in-UAE-Dubai/">UAE - Dubai</option>
+                <option value="https://isitaholiday.github.io/holiday-in-Pakistan">Pakistan</option>
+                <option value="https://isitaholiday.github.io/holiday-in-india/">India</option>
             </select>
             <br>
             <button type="submit">Submit</button>
