--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="Check if today is a holiday in any country. Find out if it is a public holiday in Australia, Germany, and more. Simple and easy holiday status checker.">
-    <meta name="keywords" content="holiday, public holidays, today holiday, check holiday, Australia holiday, Germany holiday, is it a holiday, country holiday, holiday checker">
+    <meta name="keywords" content="india, pakistan, vacation, holiday, public holidays, today holiday, check holiday, Australia holiday, Germany holiday, is it a holiday, country holiday, holiday checker">
     <meta name="robots" content="index, follow">
     <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="googlebot" content="index, follow">
@@ -17,7 +17,7 @@
     
     <!-- Open Graph Meta Tags (for social media sharing) -->
     <meta property="og:title" content="Is Today a Holiday? Check Public Holidays in Your Country | Holiday Status for Any Nation">
-    <meta property="og:description" content="Check if today is a holiday in any country. Find out if it is a public holiday in Australia, Germany, and more.">
+    <meta property="og:description" content="Check if today is a holiday in any country. Find out if it is a public holiday in Australia, Germany, India, Pakistan and more.">
     <meta property="og:image" content="https://isitaholiday.github.io/images/holiday-image.jpg"> <!-- Replace with your actual image URL -->
     <meta property="og:url" content="https://isitaholiday.github.io/home/">
     <meta property="og:type" content="website">
