--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 
     <footer class="footer">
         <div class="footer-container">
-            <div class="copy">&copy; <a class="link" href="https://github.com/khimsh" target='_blank'>IaKhimsh</a></div>
-            <div class="copy">Powered by <a class="link" href="https://calendarific.com/"
-                    target='_blank'>calendarific</a></div>
+            <div class="copy">&copy; <a class="link" href="https://github.com/isitaholiday" target='_blank'>IaKhimsh</a></div>
+            <div class="copy">Shared by <a class="link" href=""
+                    target='_blank'>Ali Tanveer</a></div>
         </div>
     </footer>
 
