--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <footer class="footer">
         <div class="footer-container">
-            <div class="copy">&copy; <a class="link" href="https://github.com/isitaholiday" target='_blank'>IaKhimsh</a></div>
+            <div class="copy">&copy; <a class="link" href="https://github.com/isitaholiday" target='_blank'>Github: isitaholiday</a></div>
             <div class="copy">Shared by <a class="link" href=""
                     target='_blank'>Ali Tanveer</a></div>
         </div>
