--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <body>
     <main class="main">
-        <h1>Is today a Holiday in <span id="selectedCountry">Georgia</span>?</h1>
+        <h1>Is today a Holiday in <span id="selectedCountry">Pakistan</span>?</h1>
         <h2 id="holidayStatus">
             <div class="lds-default">
                 <div></div>
